# bluecloudhackathondeliverable4

./: .gitignore  BlueCloud_Mini_Pipeline_Notebook.ipynb  README.md  pyproject.toml  requirements.txt  run_mini_pipeline.py
data/: analysis_report.txt  enhanced_skate_map.html  final_integrated_map.html  plankton_distribution_map.html  png_dashboard.html  png_gallery.html  skate_movement_map.html
data/planktonoutputs/: README.md
modules/: __init__.py  elasmobranch_processor.py  plankton_processor.py  png_processor.py  skate_processor.py  tiny_model.py  visualizer.py
pipeline/: main_pipeline.py
