[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluecloud-mini-pipeline"
version = "0.1.0"
description = "Mini pipeline for skate-plankton ecosystem analysis in BlueCloud hackathon"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BlueCloud Hackathon 2025 Team"},
]
keywords = ["marine", "ecology", "plankton", "skate", "tracking", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "xarray>=2022.3.0",
    "netcdf4>=1.6.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "folium>=0.12.0",
    "rasterio>=1.3.0",
    "geopandas>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/bluecloud-hackathon-2025/deliverable4"
Repository = "https://github.com/bluecloud-hackathon-2025/deliverable4"
Documentation = "https://github.com/bluecloud-hackathon-2025/deliverable4#readme"
"Bug Tracker" = "https://github.com/bluecloud-hackathon-2025/deliverable4/issues"

[project.scripts]
bluecloud-mini-pipeline = "run_mini_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "pipeline*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
